# FEnto

./: LICENSE  README.md  gitignore  pyproject.toml
paquete/: configuracion.txt  elementos_finitos_1d.py
src/FEnto/: elementos_finitos_1d.py  elementos_finitos_2d.py  malla.py
src/FEnto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: configuracion1d.txt  configuracion2d.txt  elementos.txt  nodos.txt
