[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "FEnto"
version = "0.0.1"
authors = [{name = "Uxia Sendon-Caamano", email = "usc3@alu.ua.es"}]
description = "Paquete que permite resolver ecuaciones en derivadas parciales unidimensionales y bidimensionales usando el método de elementos finitos."
readme = "README.md"
requires-python = ">=3.13.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "matplotlib"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["elementos finitos", "FEM", "MEF", "ecuaciones diferenciales", "EDs", "EDPs"]

[project.urls]
Homepage = "https://github.com/usc3-ua/FEnto/tree/main"
DOWNLOAD = "https://github.com/usc3-ua/FEnto.git"
